force-app/main/default/objects/d4c_Producer__c/fields/d4c_BirthDate__c.field-meta.xml
<CustomField>
    <fullName>d4c_BirthDate__c</fullName>
    <label>Birth Date</label>
    <type>Date</type>
</CustomField>