force-app/main/default/objects/d4c_Producer__c/fields/d4c_NameSuffix__c.field-meta.xml
<CustomField>
    <fullName>d4c_NameSuffix__c</fullName>
    <label>Name Suffix</label>
    <length>255</length>
    <type>Text</type>
</CustomField>