force-app/main/default/objects/d4c_Producer__c/fields/d4c_StateOrProvinceCode__c.field-meta.xml
<CustomField>
    <fullName>d4c_StateOrProvinceCode__c</fullName>
    <label>State Or Province Code</label>
    <length>2</length>
    <type>Text</type>
</CustomField>